my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EAFTERHOOK/T_EAFTERHOOK-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_EAFTERHOOK_STRUCT_H
#define T_EAFTERHOOK_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_EAFTERHOOK(void);


#endif /* not T_EAFTERHOOK_STRUCT_H */
